--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,18 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Project-specific
+data/
+*.parquet
+*.pkl
+*.joblib
+
+# Model checkpoints
+checkpoints/
+*.pt
+*.pth
+
+# Secrets
+.env
+secrets/
