--- a/.gitignore
+++ b/.gitignore
@@ -207,7 +207,10 @@ marimo/_lsp/
 __marimo__/
 
 # Project-specific
-data/
+data/raw/
+data/processed/
+data/models/
+!data/paper_trading/
 *.parquet
 *.pkl
 *.joblib
