added more tests

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Polygon.io API Key
-POLYGON_API_KEY=your_polygon_api_key_here
+# Massive API Key (formerly Polygon.io)
+MASSIVE_API_KEY=your_massive_api_key_here
 
 # Logging
 LOG_LEVEL=INFO
