--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -2,4 +2,4 @@
 # On Streamlit Cloud, add these in the app settings
 
 [api]
-polygon_api_key = "your_polygon_api_key_here"
+massive_api_key = "your_massive_api_key_here"
